# READI-LREC22

./: .gitignore  MANIFEST.in  README.md  issues.md  readi_reproduction.ipynb  setup.cfg
data/: bibebook.com_hotvector.csv
data/lexique/: Lexique383_slim.tsv
data/word_list/: Dubois_Buysse.xlsx
example/: readi.ipynb
exemples/: readi.ipynb
readability/: MANIFEST.in  README.md  __init__.py  issues.md  readability.py  setup.cfg  utils.py
readability/methods/: methods.py
readability/models/: bert.py  fasttext.py  models.py
readability/parsed_text/: parsed_text.py
readability/readability/: readability.py
readability/readability/data/: JeLisLibre_hotvector.csv  ljl_hotvector.csv
readability/readability/data/lexique/: Lexique383_slim.tsv
readability/readability/methods/: methods.py
readability/readability/models/: bert.py  fasttext.py  models.py
readability/readability/parsed_collection/: parsed_collection.py
readability/readability/parsed_text/: parsed_text.py
readability/readability/stats/: common_scores.py  discourse.py  diversity.py  perplexity.py  syntactic.py  word_list_based.py
readability/readability/utils/: corpus_utils.py  utils.py
readability/stats/: common_scores.py  discourse.py  diversity.py  perplexity.py  rsrs.py  syntactic.py  word_list_based.py
readability/utils/: utils.py
