[metadata]
name = readability-TristanFaine
version = 0.0.9
author = Tristan Faine, Nabil Oulbaz, Nicolas Hernandez
author_email = tristan.faine@etu.univ-nantes.fr
description = Permet d evaluer la complexite de textes en francais
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nicolashernandez/READI-LREC22
project_urls =
    Source_linguistic_analysis = https://colab.research.google.com/drive/1O7YBbukN8uhvY8IYI9zhYCRVrAR8Gnzt?usp=sharing
    Source_file_extraction = https://colab.research.google.com/drive/1jBtcQMyHd9KB5Q1iXgMrSJm-aAd6WYNp?usp=sharing
    Link to in-progress paper = https://www.overleaf.com/project/61fce1b715a0b91e8b221aab
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data=True

python_requires = >=3.6
install_requires =
    pandas
    spacy==3.2.0
    torch
    transformers
    unidecode
    scipy
    ktrain
    numpy
    tensorflow
    gensim
    coreferee
